--- a/single file/index.html
+++ b/single file/index.html
@@ -62,11 +62,11 @@ tr,td,th{border:1px solid black; padding:5px;}
        <script>
 					  
 		//FireBase Database Config	
-		  var config = {
-			  apiKey: " AAAAESDdNRg:APA91bFoA13GgEqSapjoBaz7NlSyMhiPk-5BJOILY2PZBPQHc2569rCVyLNzhs1gQHTfJmMElHIzSl7kXR3SFpyshYYVylOAkOEiNzQic0hNR7fLBW6InxrR-3Go2T8BQhrlo0vXbLJG ",
-			  authDomain: "ansnew007.firebaseapp.com",
-			  databaseURL: "https://ansnew007-default-rtdb.firebaseio.com",
-			  storageBucket: "ansnew007.appspot.com"
+	          var config = {
+			  apiKey: "Please Paste your key Here",
+			  authDomain: "******.firebaseapp.com",
+			  databaseURL: "https://******-default-rtdb.firebaseio.com",
+			  storageBucket: "******.appspot.com"
 			  };
 			  firebase.initializeApp(config);
 			  
